# ggxrd_freecam

./: README.md  TODO.txt  ggxrd_freecam.ini  ggxrd_freecam.sln  icon.xcf  launch_ggxrd_freecam_injector_linux.sh
common/: ggxrd_freecam_injector_common.cpp  ggxrd_freecam_patcher_common.cpp
ggxrd_freecam_dll/: AltModes.cpp  AltModes.h  Camera.cpp  Camera.h  CameraMoveInputs.h  Controls.cpp  Controls.h  Detouring.cpp  Detouring.h  Direct3DVTable.cpp  EndScene.cpp  EndScene.h  Game.cpp  Game.h  Hud.cpp  Hud.h  InputData.cpp  InputData.h  KeyComboSet.cpp  KeyComboSet.h  Keyboard.cpp  Keyboard.h  MultiplicationTable.cpp  MultiplicationTable.h  PngRelated.cpp  RecursiveMutex.cpp  RecursiveMutex.h  Screenshotting.cpp  Screenshotting.h  Settings.cpp  Settings.h  Vector3.h  Version.h  dllmain.cpp  ggxrd_freecam_dll.rc  ggxrd_freecam_dll.vcxproj  ggxrd_freecam_dll.vcxproj.filters  memoryFunctions.cpp  memoryFunctions.h  prebuild.ps1  (+1 more)
ggxrd_freecam_injector/: WinError.cpp  WinError.h  ggxrd_freecam_injector.cpp  ggxrd_freecam_injector.rc  ggxrd_freecam_injector.vcxproj  ggxrd_freecam_injector.vcxproj.filters  prebuild.ps1  resource.h
ggxrd_freecam_injector_console/: ggxrd_freecam_injector_console.cpp  ggxrd_freecam_injector_console.rc  ggxrd_freecam_injector_console.vcxproj  ggxrd_freecam_injector_console.vcxproj.filters  prebuild.ps1  resource.h
ggxrd_freecam_patcher/: CMakeLists.txt  ggxrd_freecam_patcher.cpp  ggxrd_freecam_patcher.rc  ggxrd_freecam_patcher.vcxproj  ggxrd_freecam_patcher.vcxproj.filters  prebuild.ps1  resource.h
ggxrd_freecam_patcher_console/: resource.h  (+6 more)
